--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="popup.css" />
-    <title>TV Show Search</title>
-  </head>
-  <body></body>
-  <script src="popup.js"></script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="popup.css" />
+  <title>TV Show Search</title>
+</head>
+
+<body>
+  <div id="shows-container">
+
+  </div>
+</body>
+<script src="popup.js"></script>
+
 </html>
